--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
 	"setup" :"setup/setup.sh",
-	"start" : "node server.js"
+	"start" : "nodemon server.js"
   },
   "repository": {
     "type": "git",
